--- a/FrontEnd/perMovDb/package.json
+++ b/FrontEnd/perMovDb/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
+    "lucide-react": "^0.513.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
