--- a/BackEnd/permovdb/pom.xml
+++ b/BackEnd/permovdb/pom.xml
@@ -117,6 +117,10 @@
 			<artifactId>gson</artifactId>
 			<version>2.13.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -126,6 +130,14 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>scripts/recommendationService/rec-env/**</exclude>
+				</excludes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
