--- a/FrontEnd/perMovDb/package.json
+++ b/FrontEnd/perMovDb/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.3",
     "universal-cookie": "^8.0.1"
   },
