--- a/FrontEnd/perMovDb/package.json
+++ b/FrontEnd/perMovDb/package.json
@@ -13,15 +13,16 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.1",
+    "@preline/range-slider": "^3.1.0",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "lucide-react": "^0.513.0",
+    "nouislider": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "swiper": "^11.2.8",
-    "tailwindcss": "^4.1.3",
     "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "tailwindcss": "^4.1.10",
     "vite": "^6.2.0"
   }
 }
